--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Value Information</title>
+    <title>Value Information - 超お得なセール品</title>
     <style>
         body {
             background-color: #000000;
@@ -20,29 +20,28 @@
         header {
             text-align: center;
             border-bottom: 2px solid #ffd700;
-            padding-bottom: 10px;
-            margin-bottom: 30px;
+            padding-bottom: 20px;
+            margin-bottom: 40px;
         }
         .site-name {
             font-size: 1.2rem;
-            font-weight: bold;
             letter-spacing: 2px;
+            text-transform: uppercase;
         }
         h1 {
-            font-size: 1.5rem;
-            text-align: center;
-            margin: 20px 0 40px;
+            font-size: 1.8rem;
+            margin-top: 10px;
         }
         .product-card {
-            background-color: #111;
             border: 1px solid #ffd700;
-            border-radius: 10px;
+            border-radius: 12px;
             padding: 25px;
             margin-bottom: 30px;
+            background: linear-gradient(145deg, #0a0a0a, #1a1a1a);
             box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1);
         }
         .product-title {
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             font-weight: bold;
             margin-bottom: 15px;
             border-left: 4px solid #ffd700;
@@ -52,14 +51,13 @@
             font-size: 1.1rem;
             font-weight: bold;
             margin-bottom: 10px;
-            display: block;
+            color: #ffffff;
         }
         .reason {
             font-size: 0.95rem;
             margin-bottom: 20px;
-            color: #fff; /* 読みやすさのため一部白 */
         }
-        .button-container {
+        .button-group {
             display: flex;
             gap: 15px;
             flex-wrap: wrap;
@@ -71,26 +69,25 @@
             padding: 12px 0;
             text-decoration: none;
             font-weight: bold;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-            border: 1px solid #ffd700;
-        }
-        .btn-amazon {
-            background-color: transparent;
-            color: #ffd700;
-        }
-        .btn-rakuten {
-            background-color: #ffd700;
-            color: #000;
+            border-radius: 6px;
+            transition: transform 0.2s, opacity 0.2s;
         }
         .btn:hover {
-            opacity: 0.8;
             transform: translateY(-2px);
+            opacity: 0.8;
+        }
+        .btn-amazon {
+            background-color: #ffd700;
+            color: #000000;
+        }
+        .btn-rakuten {
+            background-color: transparent;
+            color: #ffd700;
+            border: 1px solid #ffd700;
         }
         @media (max-width: 600px) {
-            .button-container {
-                flex-direction: column;
-            }
+            h1 { font-size: 1.4rem; }
+            .product-title { font-size: 1.2rem; }
         }
     </style>
 </head>
@@ -99,58 +96,50 @@
 <div class="container">
     <header>
         <div class="site-name">Value Information</div>
+        <h1>【楽天市場・Amazon】2026年2月24日 5時の超お得なセール品！</h1>
     </header>
 
-    <h1>【楽天市場・Amazon】2026年2月24日 4時の超お得なセール品！</h1>
-
-    <!-- 商品カード1 -->
+    <!-- 商品1 -->
     <div class="product-card">
-        <div class="product-title">【30%OFF】次世代フラッグシップスマホ Pro Max</div>
-        <div class="description">
-            <span class="benefit">圧倒的な処理速度で、あなたの創造性を解き放つ自由を。</span>
-            <p class="reason">
-                モデルチェンジ前の在庫一掃セールにより、過去最安値を更新しています。<br>
-                このスペックがこの価格で手に入るのは今だけであり、即完売が予想されます。
-            </p>
+        <div class="product-title">【35%OFF】静寂の極み、次世代ノイズキャンセリングヘッドホン</div>
+        <div class="benefit">騒音を消し去り、あらゆる場所をあなただけの最高級コンサートホールに変える。</div>
+        <div class="reason">
+            最新モデルが24時間限定の過去最安値を更新。これまでにない静寂を手に入れ、<br>
+            仕事の集中力と移動時間の幸福度を劇的に引き上げる絶好の機会です。
         </div>
-        <div class="button-container">
-            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
+        <div class="button-group">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
     </div>
 
-    <!-- 商品カード2 -->
+    <!-- 商品2 -->
     <div class="product-card">
-        <div class="product-title">【ポイント20倍】究極のノイズキャンセリングヘッドホン Elite X</div>
-        <div class="description">
-            <span class="benefit">騒音を消し去り、一瞬で自分だけの静寂なコンサートホールへ。</span>
-            <p class="reason">
-                現在実施中のポイント還元キャンペーンを適用すれば、実質価格で他店を圧倒します。<br>
-                テレワークや移動時間を極上の体験に変えるなら、このポイント倍率を逃す手はありません。
-            </p>
+        <div class="product-title">【ポイント20倍】未来を身に纏う。最新型フラッグシップ・スマートウォッチ</div>
+        <div class="benefit">専属の健康コンシェルジュが、あなたの心身のパフォーマンスを24時間最適化する。</div>
+        <div class="reason">
+            楽天ポイント大幅還元により実質価格が崩壊中。健康への投資を迷っていたなら、<br>
+            この驚異的な還元率を誇る「今」こそが、人生を変えるガジェットを手に入れるべき時です。
         </div>
-        <div class="button-container">
-            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
+        <div class="button-group">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
     </div>
 
-    <!-- 商品カード3 -->
+    <!-- 商品3 -->
     <div class="product-card">
-        <div class="product-title">【45%OFF】超高速充電対応・大容量モバイルバッテリー</div>
-        <div class="description">
-            <span class="benefit">電池残量の不安から解放され、スマートな1日を約束する。</span>
-            <p class="reason">
-                期間限定のフラッシュセール対象となっており、通常価格のほぼ半額で購入可能です。<br>
-                防災用としても需要が高まっており、在庫があるうちに確保しておくべき逸品です。
-            </p>
+        <div class="product-title">【40%OFF】創造性を加速させる、超高速ワイヤレスメカニカルキーボード</div>
+        <div class="benefit">指先から奏でる心地よい打鍵感が、毎日のタイピングを至福のクリエイティブ体験に。</div>
+        <div class="reason">
+            Amazonの特選タイムセールで、通常では考えられない割引率が適用中。<br>
+            生産性を極限まで高める最高峰の入力デバイスを、在庫が尽きる前に確保してください。
         </div>
-        <div class="button-container">
-            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
+        <div class="button-group">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
     </div>
-
 </div>
 
 </body>
